<resources>
    <string name="app_name">Developeiros</string>
    <string name="new_employee">Adicionar novo funcionário</string>
    <string name="new_client">Adicionar novo cliente</string>
    <string name="new_event">Adicionar novo evento</string>
    <string name="new_service">Adicionar novo serviço</string>
    <string name="welcome">Boas-vindas!</string>
    <string name="none_service">Não há serviços cadastrados ainda.</string>
    <string name="none_employee">Não há funcionários cadastrados ainda.</string>
    <string name="none_event">A agenda está vazia.</string>
    <string name="none_client">Não há clientes cadastrados ainda.</string>
    <string name="login_message">Insira seu login e senha para continuar.</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="go_on">Continuar</string>
    <string name="register">Cadastrar</string>
    <string name="welcome_back">Boas-vindas de volta, </string>
    <string name="select">Selecione uma opção para continuar</string>
    <string name="employees">Funcionários</string>
    <string name="services">Serviços</string>
    <string name="clients">Clientes</string>
    <string name="events">Agenda</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="forgotPassword">Insira o seu e-mail para recuperar a senha.</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="delete">Excluir</string>
    <string name="update">Atualizar</string>
    <string name="label_service">Serviço:</string>
    <string name="label_description">Descrição:</string>
    <string name="label_login">Login:</string>
    <string name="label_name">Nome:</string>
    <string name="label_event">Evento:</string>
    <string name="label_client">Cliente:</string>
    <string name="label_datetime">Data e hora:</string>
    <string name="label_name_contact">Nome de contato:</string>
    <string name="label_cnpj">CNPJ:</string>
    <string name="label_telephone">Telefone:</string>
    <string name="label_address">Endereço:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_observations">Observações:</string>
    <string name="address">Endereço</string>
    <string name="telephone">Telefone</string>
    <string name="cnpj">CNPJ</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="observation">Observações</string>
    <string name="full_name">Nome completo</string>
    <string name="description">Descrição</string>
    <string name="service">Serviço</string>
    <string name="event">Título</string>
    <string name="date">Data</string>
    <string name="time">Horário</string>
    <string name="label_service_employees">Funcionários especializados nesse serviço:</string>
    <string name="label_employee_services">Serviços do funcionário:</string>
    <string name="label_services_client">Serviços solicitados:</string>
    <string name="description_developeiros_logo">Logo Developeiros</string>
    <string name="see_services">Ver serviços</string>
    <string name="x">X</string>
    <string name="delete_button">Delete button</string>
    <string name="add">Adicionar</string>
    <string name="finish">Concluir</string>
    <string name="label_client_services">Requisições do cliente</string>
    <string name="label_add_service">Selecione o serviço para adicionar</string>
</resources>