<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActLogin"
    android:background="@color/background_dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6pt">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/txvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="18pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txvWelcome"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/login_message"
                android:textColor="@color/white"
                android:textSize="8pt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="48dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edlLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/soft_border_radius"
                android:hint="@string/login"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/soft_border_radius"
                    android:backgroundTint="@color/dark_gray"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edlLogin"
                android:background="@drawable/soft_border_radius"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/soft_border_radius"
                    android:backgroundTint="@color/dark_gray"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edlPassword"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/cardview_light_background" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="5dp"
            android:text="@string/go_on" />

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>